--- a/05 - Neural Networks - Blank.ipynb
+++ b/05 - Neural Networks - Blank.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "Text(0.5, 1.0, 'Train data')"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "Text(0.5, 1.0, 'Test data')"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 256,
    "metadata": {
     "scrolled": true
    },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 259,
    "metadata": {
     "scrolled": true
    },
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 261,
    "metadata": {
     "scrolled": true
    },
@@ -970,6 +970,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Answer:** A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step 4. Getting the predictions\n",
     "\n",
     "Since this is a multinomial classification problem, the predicted class corresponds to the class with the highest probability.\n",
@@ -993,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 262,
    "metadata": {
     "scrolled": true
    },
@@ -1022,13 +1029,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your code here\n",
-    "random_training_indices = X_train[random_indices]\n",
-    "scores, probabilities = network.forward(random_training_indices)"
+    "scores, probabilities = network.forward(X_train[random_indices])"
    ]
   },
   {
@@ -1040,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -1151,6 +1157,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Answer:** C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step 5. Calculating the loss\n",
     "\n",
     "Since this is a multinomial classification problem, we need to use cross entropy loss.\n",
@@ -1167,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 274,
    "metadata": {
     "scrolled": true
    },
@@ -1326,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 276,
    "metadata": {
     "scrolled": true
    },
@@ -1408,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1792,7 @@
        ")"
       ]
      },
-     "execution_count": 419,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1797,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1814,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1824,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -1888,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1898,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -1945,7 +1958,7 @@
        "Text(0.5, 1.0, 'Loss for each training epoch')"
       ]
      },
-     "execution_count": 427,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2003,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -2050,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -2089,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -2140,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -2180,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2197,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2214,7 +2227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2231,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2267,7 +2280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 297,
    "metadata": {
     "scrolled": true
    },
@@ -2286,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2304,7 +2317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -2370,7 +2383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2387,7 +2400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2406,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2425,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -2796,7 +2809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -2814,7 +2827,7 @@
        ")"
       ]
      },
-     "execution_count": 443,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2832,7 +2845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2849,7 +2862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2859,7 +2872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -2884,7 +2897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2894,7 +2907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -2918,7 +2931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2928,7 +2941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
